[package]
name = "openglstuff"
version = "0.1.0"
authors = ["m-n-n <mnerius@gmx.de>"]
edition = "2018"

[lib]
name = "ogl"
path = "src/lib.rs"

[[bin]]
name = "ogl"
path = "src/main.rs"

# dependencies for gl
[dependencies]
gl = "0.6.0"

#build dependencies for gl
[build-dependencies]
gl_generator = "0.5.0"
khronos_api = "1.0.0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
